# alphadb

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SETUP.md  config-server.py  config-ui.html  dashboard-server.py  dashboard.html  docker-compose.discovery-stack.yml  docker-compose.yml  ingest.py  init.sql  package-lock.json  package.json  pyproject.toml  requirements.txt  testing_notes.md  vector.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.out-of-scope/: broad-x-signal-expansion.md  x-fail-closed-budget-gates.md
apps/api/: Dockerfile  package.json  tsconfig.json
apps/dashboard/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts
apps/tui/: .gitignore  AGENTS.md  README.md  package.json  tsconfig.json
apps/web/: Dockerfile  index.html  package.json  server.mjs  tsconfig.json
client/: index.html  package.json
client/src/: App.tsx  main.tsx  styles.css
config/: safety.yaml
config/strategies/: mean-reversion-funding.yaml
crates/agent/: Cargo.toml
crates/agent/src/: config.rs  ipc_client.rs  main.rs  strategy.rs
crates/agent/src/feedback/: loop1.rs  mod.rs  store.rs
crates/common/: Cargo.toml
crates/gate/: Cargo.toml
crates/gate/src/: audit.rs  config.rs  db.rs  exchange.rs  main.rs  risk.rs  rule_engine.rs  state.rs  validator.rs
deploy/aws/: brti-live-collector.yaml  deploy-brti-live-collector.sh  deploy-cockpit-stack.sh  deploy-ec2-dashboard.sh  deploy-expensive-yes-live-trading-job.sh  deploy-fair-value-live-trading-job.sh  deployment-profile.example.yaml  ec2-dashboard.yaml  ecs-fargate-dashboard.yaml  expensive-yes-live-trading-job.yaml  fair-value-live-trading-job.yaml  smoke-cockpit-stack.sh  update-dashboard-ingress.sh
deploy/fly/: api.fly.toml  release-api.sh  web.fly.toml
docker/: Dockerfile
docs/: API.md  CRON_SETUP.md  FEATURES_EXPORT.md  FEATURES_INTEGRATION.md  FEATURE_ENGINEERING.md  README.md  SETUP.md  TROUBLESHOOTING.md  public-repo-profile.md
docs/adr/: 0001-nextjs-agent-first-dashboard.md  0002-python-owns-dashboard-api.md  0003-cockpit-and-alphadb-api-boundary.md  0004-aws-release-discipline.md  0004-postgres-live-decision-authority-lease.md  0005-cockpit-deployment-authority.md
docs/adrs/: 0001-monorepo-and-app-topology.md  0002-client-backend-contract.md  0003-canonical-market-domain-model.md  0004-storage-caching-and-retention.md  0005-search-discovery-and-ranking.md  0006-realtime-ingestion-and-delivery.md  0007-auth-tenancy-and-user-state.md  0008-observability-sre-and-release.md  0009-migration-from-branches.md  README.md
docs/agents/: domain.md  issue-tracker.md  strategy-diagnosis.md  triage-labels.md
docs/architecture/: boundaries.md
docs/checklists/: 001-backend-convergence-decision-checklist.md
docs/deployment/: aws-dashboard.md  live-money-cutover-checklist.md  local-cockpit.md
docs/plans/: 001-polymarket-ansi-tui.md  002-phase-1-backend-convergence.md  003-phase-2-productionization-baseline.md  004-fly-deployment-plan.md
docs/polymarket/: README.md  discovery-run-implementation-checklist.md  polymarket-discovery-runs-visual-plan.html  polymarket-market-channels-call-graph.html  polymarket-market-channels-visual-plan-diagram.html
docs/prd/: agent-first-dashboard-mvp.md  agent-first-dashboard-priority-plan.md  aws-cockpit-mvp.md  aws-deployment-release-discipline.md  expensive-yes-guarded-live-run.md  (+3 more)
examples/: basic.rs  benchmark.rs  rest_server.rs
experiments/: README.md
gateway/: Cargo.toml  Dockerfile
gateway/config/: config.toml
gateway/src/: buffer.rs  config.rs  db_sink.rs  main.rs  model.rs  ws_client.rs
grafana/datasources/: ds.yml
notebooks/: features_ml_example.ipynb
notes/: 0-0-dataflows.md  0-dataflows.md  1-0-docker_rustrecorder.md  1-1-rustrecorder_prd.md  1-setup_tasks.md  2-0-featurepipeline.md  2-1-features_implementation_plan.md  3-0-implementation_plan.md  backlog.md  implementation_notes.md  rust_commands.md
scripts/: backfill.py  benchmark-fair-value-live-latency.py  coingecko_backfill.py  daily_backfill_cron.sh  export_features.py  export_simple_features.py  ingest.py  run_backfill.sh  run_coingecko_backfill.sh  setup_cron.sh  smoke-local-cockpit.sh  start-live-tmux.sh  start-live.sh  stop-live.sh  validate-brti-primary-live-smoke.py  validate-cockpit-portfolio-smoke.py  validate-fair-value-live-smoke.py
server/: package.json
sql/: features_btc.sql  features_ca.sql  features_ca_fixed.sql  features_ca_simple.sql  features_eth.sql  features_indexes.sql  features_refresh_policy.sql  features_unified.sql  features_validation.sql
src/: builder.rs  hnsw.rs  index.ts  lib.rs  main.rs  python.rs  rest.rs  tests.rs  types.ts
tauri-app/: Cargo.toml  tauri.conf.json
tests/: test_artifacts.py  test_aws_deploy_orchestrator.py  test_brti_collector.py  test_coinbase_adapter.py  test_config.py  test_current_mvp_features.py  test_current_mvp_import_and_shadow_parity.py  test_dashboard_api_envelope.py  test_dashboard_auth.py  test_dashboard_data_explorer.py  test_dashboard_deployment_api.py  test_dashboard_lab.py  test_dashboard_live_console.py  test_dashboard_performance.py  test_dashboard_strategy_manager.py  test_dashboard_strategy_rows.py  test_dashboard_strategy_spec.py  test_decision_engine.py  test_deploy.py  test_deployment_intents.py  test_deployment_worker.py  test_evidence_report.py  test_execution_attribution.py  test_expensive_yes_live.py  test_external_signals_x_api.py  test_fair_value_live_report.py  test_fair_value_mvp.py  test_feature_ledger.py  test_health.py  test_kalshi_rest_collector.py  test_kalshi_ws.py  test_live_authority.py  test_live_data_paper_runner.py  test_live_edge_attribution.py  test_live_orders.py  test_live_risk.py  test_live_risk_refresh.py  test_live_runtime.py  test_live_settlement.py  test_markets.py  (+19 more)
trading-agent-spec/: README.md
(+323 files in other folders)
