[package]
name = "alphadb"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"

# Optional dependencies for features
tokio = { version = "1.0", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }

[features]
default = []
rest = ["dep:axum", "dep:tokio", "dep:serde", "dep:serde_json"]
python = ["dep:pyo3"]

[lib]
name = "alphadb"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "rest_server"
required-features = ["rest"]

[dev-dependencies]
criterion = "0.5"