[workspace]
members = [
  "crates/common",
  "crates/gate",
  "crates/agent"
]
exclude = ["tauri-app"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.43", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonwebtoken = "9.3"
rustls = "0.23"
rusqlite = { version = "0.32", features = ["bundled"] }
