[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphadb"
version = "0.1.0"
description = "Replayable, risk-controlled prediction-market trading platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "psycopg[binary]>=3.2",
  "pyyaml>=6.0",
]

[project.scripts]
alphadb-health = "alphadb.health:main"
alphadb-markets = "alphadb.markets.cli:main"
alphadb-state = "alphadb.state.cli:main"
alphadb-events = "alphadb.events.cli:main"

[project.optional-dependencies]
dashboard = ["streamlit>=1.35"]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
