[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphadb"
version = "0.1.0"
description = "Replayable, risk-controlled prediction-market trading platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=42",
  "joblib>=1.4",
  "pydantic>=2.7",
  "psycopg[binary]>=3.2",
  "pyyaml>=6.0",
  "scikit-learn==1.6.1",
]

[project.scripts]
alphadb-health = "alphadb.health:main"
alphadb-markets = "alphadb.markets.cli:main"
alphadb-state = "alphadb.state.cli:main"
alphadb-runtime = "alphadb.runtime:main"
alphadb-events = "alphadb.events.cli:main"
alphadb-collect = "alphadb.collectors.kalshi_rest:main"
alphadb-coinbase = "alphadb.collectors.coinbase:main"
alphadb-artifacts = "alphadb.artifacts:main"
alphadb-models = "alphadb.model_registry.registry:main"
alphadb-features = "alphadb.features.ledger:main"
alphadb-decide = "alphadb.decision_engine.engine:main"
alphadb-risk = "alphadb.risk.gate:main"
alphadb-paper = "alphadb.paper.ioc:main"
alphadb-replay = "alphadb.replay.report:main"
alphadb-shadow = "alphadb.shadow.comparison:main"
alphadb-shadow-current-mvp = "alphadb.shadow.current_mvp:main"
alphadb-shadow-parity = "alphadb.shadow.parity:main"
alphadb-ws = "alphadb.collectors.kalshi_ws:main"
alphadb-strategy = "alphadb.strategy.runner:main"
alphadb-evidence = "alphadb.evidence:main"
alphadb-live-orders = "alphadb.live_orders:main"
alphadb-deploy = "alphadb.deploy:main"
alphadb-monitor = "alphadb.monitoring.status:main"

[project.optional-dependencies]
dashboard = [
  "streamlit>=1.38",
  "streamlit-cookies-controller>=0.0.4",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
