[package]
name = "ws_recorder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ws_recorder"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# JSON parsing and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
toml = "0.8"

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal precision for financial data
rust_decimal = { version = "1.32", features = ["serde-str"] }

# Metrics and observability
metrics = "0.22"
metrics-exporter-prometheus = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Environment variables
dotenvy = "0.15"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# URL parsing
url = "2.4"

[dev-dependencies]
testcontainers = "0.15"