[package]
name = "trading-gate"
version = "0.1.0"
edition = "2021"

[dependencies]
trading-common = { path = "../common" }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { version = "1.10", features = ["v4"] }
